# knowledge-aware-technician-assignment

./: .gitignore  .gitmodules  CLAUDE.md  COMPONENT_SYSTEM_README.md  IMPLEMENTATION_GUIDE.md  LICENSE  README.md  SIMPY_README.md  SUMMARY.md  SYNTHETIC_TICKET_FACTORY_README.md  demo_component_system.py  demo_synthetic_ticket_factory.py  example_usage.py  factory_simulation.py  pyproject.toml  test_kataenv.py
analysis/: 00_overview.ipynb  01_learning_curves.ipynb  02_reward_decomposition.ipynb  03_episode_kpis.ipynb  04_per_technician.ipynb  05_per_machine.ipynb  06_compare_runs.ipynb  07_encoder_pretraining.ipynb  README.md  _build_notebooks.py  human_factors_block_proposal.md  taxonomy_row_verification.md  utils.py
benchmarks/: README.md  _generate.py  baseline.ipynb  long_horizon.ipynb  massive_scale.ipynb  no_disruption.ipynb  no_fatigue.ipynb  short.ipynb  small_scale.ipynb
checkpoints/: grpo_best.pt  grpo_complex_factory.pt  grpo_ep00100.pt  grpo_ep00200.pt  grpo_ep00300.pt  grpo_ep00400.pt  grpo_ep00500.pt  grpo_final.pt
examples/: benchmark_agent.ipynb  complex_factory.ipynb  env.ipynb  train_grpo.ipynb
notebooks/: _build_knowledge_notebook.py  _build_knowledge_progression_notebook.py  _build_knowledge_tuning_notebook.py  _build_ticket_projection_notebook.py  build_technician_profiles.ipynb  knowledge_curve_tuning.ipynb  knowledge_impact.ipynb  knowledge_progression.ipynb  ticket_projection.ipynb
run_configs/: complex_factory.json  complex_factory_long_structured.json  complex_factory_long_token_ids.json  config.json  factory_full_pipeline.json  factory_long.json  factory_long_lean.json  factory_randomized.json  factory_randomized_slim.json  factory_set.json  factory_set_quick.json  factory_stress.json  factory_v2.json  minimal.json
scripts/: analyze_hvp_results.py  build_set_vocab.py  disruption_stats.py  eval_human_vs_performance.py  plot_hvp_figures.py  pretrain_encoder.py  rerun_masked_heuristics.sh  sanity_vec_env.py  smoke_improvements.py  train_hc_improved.py
specifications/: SUMMARY.md  generate_figure.py
studies/: reward_analysis.py
(+175 files in other folders)
