[project]
name = "knowledge-aware-technician-assignment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "gymnasium>=1.2.0",
  "numba>=0.61.2",
  "numpy>=2.2.6",
  "ongoing",
  "prince>=0.17.0",
  "pydantic-settings>=2.12.0",
  "pydantic>=2.12.4",
  "simpy>=4.1.1",
  "torch>=2.11.0",
  "wandb>=0.19.0",
]

[project.scripts]
kata-experiment = "experiment.cli:main"

[project.optional-dependencies]
visual = ["plotly>=6.0.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.uv.sources]
ongoing = { git = "https://github.com/AdrienBolling/ONGOING.git" }

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
